--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ authors = ["Rui Lopes <ruieduardo.fa.lopes@av.it.pt>"]
 edition = "2018"
 
 [dependencies]
+arrayref = "0.3"
 clap = "2.33"
 chrono = "0.4"
